--- a/gameover.html
+++ b/gameover.html
@@ -9,6 +9,9 @@
 </head>
 
 <body class="game-cover flex-centered">
+    <audio autoplay>
+        <source src="./assets/gameover.wav" type="audio/wav">
+      </audio>
     <img id="game-over-text" src="http://i1.faceprep.in/prograd-junior/gameover-text.png" alt="game-over" height="300px"width="200px">
     <div id="score-box">SCORE: <span id="score-board"></span></div>
     <audio id="button-click" src="./assets/pop.wav" preload="auto"></audio>
