--- a/levels.html
+++ b/levels.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Numeron</title>
+    <title>Numeron - levels</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
