Added back button.

--- a/levels.html
+++ b/levels.html
@@ -9,6 +9,9 @@
 </head>
 
 <body class="game-cover flex-centered">
+    <a href="index.html">
+        <img src="./assets/backbutton.png" alt="Back Button" height="100px"width="100px">
+    </a>
     <audio id="button-click" src="./assets/pop.wav" preload="auto"></audio>
     <a onclick="document.getElementById('button-click').play();">
         <img id="easy" src="./assets/easy.png" alt="play-button">
