--- a/medium.html
+++ b/medium.html
@@ -9,6 +9,9 @@
 </head>
 
 <body class="game flex-centered">
+    <a href="levels.html">
+        <img src="./assets/backbutton.png" alt="Back Button" height="100px"width="100px">
+    </a>
     <div id="timer" class="flex-centered"></div>
     <div id="game-mode">GAMEMODE - MEDIUM</div>
     <div id="instructions">Guess the Operator</div>
