Added a new gamemode!

--- a/levels.html
+++ b/levels.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Numeron - Levels</title>
+    <title>Numeron - Guess the Operator - Levels</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
 <body class="game-cover flex-centered">
-    <a href="index.html">
+    <a href="gamemode.html">
         <img src="./assets/backbutton.png" alt="Back Button" height="100px"width="100px">
     </a>
     <audio id="button-click" src="./assets/pop.wav" preload="auto"></audio>
