--- a/cube-end.html
+++ b/cube-end.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="cube.css">
 </head>
 <body>
+    <audio autoplay>
+        <source src="./assets/gameover.wav" type="audio/wav">
+      </audio>
     <div class="wrapper">
         <div class="result">
            <h1 id="result-header">
