--- a/cube.html
+++ b/cube.html
@@ -11,12 +11,9 @@
     <div class="wrapper">
       <div class="quiz">
         <div class="quiz_body">
-          <a href="gamemode.html">
-            <img src="./assets/backbutton.png" alt="Back Button" height="100px"width="100px">
-          </a>
           <div id="questions">     
           </div>
-          <button class="btn-next" onclick="next()">NEXT<img src="https://i1.faceprep.in/next-button.png" /></button>
+          <button class="btn-next" onclick="next()">Next<img src="https://i1.faceprep.in/next-button.png" /></button>
         </div>
       </div>
     </div>
