--- a/gamemode.html
+++ b/gamemode.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Numeron - Choose Mode</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="gamemode.css" />
 </head>
 
 <body class="game-cover flex-centered">
@@ -15,10 +15,10 @@
 
     <audio id="button-click" src="./assets/pop.wav" preload="auto"></audio> <!--define audio element-->
     <a onclick="document.getElementById('button-click').play();">
-        <img id="guess-operator-quiz" src="./assets/guess-operator-mode.png" alt="guess-operator-button">
+        <h1 id="guess-operator-quiz">guess-operator-quiz</h1>
     </a>
     <a onclick="document.getElementById('button-click').play();">
-        <img class="play" id="cubes-squares-quiz" src="./assets/squares-cubes-mode.png" height="120px" width="975px" alt="squares-cubes-quiz-button">
+        <h1 id="cubes-squares-quiz">cubes-squares-quiz</h1>
     </a>
     <script src="./gamemode.js"></script>
 </body>
