Updated titles, again

--- a/hard.html
+++ b/hard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Numeron - Hard</title>
+    <title>Mode: Hard - Guess the Operator Quiz - Numeron</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
