--- a/gamemode.html
+++ b/gamemode.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Numeron - Choose Mode</title>
+    <title>Choose Gamemode - Numeron</title>
     <link rel="stylesheet" href="gamemode.css" />
 </head>
 
@@ -15,10 +15,10 @@
 
     <audio id="button-click" src="./assets/pop.wav" preload="auto"></audio> <!--define audio element-->
     <a onclick="document.getElementById('button-click').play();">
-        <h1 id="guess-operator-quiz">guess-operator-quiz</h1>
+        <h1 id="guess-operator-quiz">GUESS THE OPERATOR QUIZ</h1>
     </a>
     <a onclick="document.getElementById('button-click').play();">
-        <h1 id="cubes-squares-quiz">cubes-squares-quiz</h1>
+        <h1 id="cubes-squares-quiz">CUBES & SQUARES QUIZ</h1>
     </a>
     <script src="./gamemode.js"></script>
 </body>
