--- a/cube.html
+++ b/cube.html
@@ -13,7 +13,7 @@
         <div class="quiz_body">
           <div id="questions">     
           </div>
-          <button class="btn-next" onclick="next()">Next<img src="https://i1.faceprep.in/next-button.png" /></button>
+          <button class="btn-next" onclick="next()">NEXT<img src="https://i1.faceprep.in/next-button.png" /></button>
         </div>
       </div>
     </div>
